--- a/vignettes/examplesnd.Rmd
+++ b/vignettes/examplesnd.Rmd
@@ -10,57 +10,77 @@ vignette: >
 ```{r, include = FALSE}
 knitr::opts_chunk$set(
   collapse = TRUE,
-  comment = "#>"
+  comment = "#>",
+  out.width = "100%",
+  fig.asp = 0.5,
+  dpi = 200
 )
 ```
 
 This vignette contains a number of examples on how to use `clugenr` in 1D and
-5D. Each example must be preceded with:
+5D. Examples require the following setup code:
 
 ```{r setup, message=FALSE, warning=FALSE}
-library(clugenr)    # The clugenr library
-library(ggplot2)     # Required for plotting
+library(clugenr)   # The clugenr library
+library(ggplot2)   # For plotting
+library(patchwork) # For combining plots
 
 # Keep examples reproducible in newer R versions 
 RNGversion("3.6.0") 
-
-# Marker style for 2D plots
-marker2d <- list(size = 4, line = list(color = 'black', width = 0.2))
 ```
 
 #### Basic 1D example with density plot
 
 ```{r}
-# Custom proj_dist_fn: point projections placed using the Beta distribution
-proj_beta <- function(len, n) len * rbeta(n, 0.1, 0.1) - len / 2
-seed <- 123
+# Custom proj_dist_fn: point projections placed using the Weibull distribution
+proj_wbull <- function(len, n) rweibull(n, shape = 1.5, scale = len / 2) - len / 2
+
+# Function for plotting the 1D clusters, showing density
+plot_examples_1D <- function(...) {
+  ets <- list(...)
+  xmax <- max(sapply(ets, function(et) max(et$e$points)))
+  xmin <- min(sapply(ets, function(et) min(et$e$points)))
+  plts <- lapply(
+    ets,
+    function(et) {
+      e <- et$e
+      t <- et$t
+      ggplot() +
+        geom_density(mapping = aes(x = e$points,
+                                   colour = factor(e$point_clusters),
+                                   fill = factor(e79$point_clusters)),
+                     alpha = 0.3) +
+        geom_point(mapping = aes(x = e$points,
+                                 y = 0,
+                                 fill = factor(e$point_clusters)),
+                   shape = 21,
+                   colour = "black",
+                   stroke = 0.1,
+                   alpha = 0.2) +
+        ggtitle(t) + xlab(NULL) + ylab(NULL) +
+        scale_y_continuous(breaks = NULL) +
+        xlim(xmin, xmax) +
+        theme(legend.position = "none",
+              plot.title = element_text(size = rel(0.9)),
+              axis.ticks.y = element_blank(),
+              axis.text.y = element_blank())
+    })
+  wrap_plots(plts)
+}
+
+seed <- 222
 ```
 
 ```{r}
 set.seed(seed)
 e79 = clugen(1, 3, 2000, 1, 0, 10, 6, 1.5, 0)
+set.seed(seed)
 e80 = clugen(1, 3, 2000, 1, 0, 10, 6, 1.5, 0, proj_dist_fn = "unif")
-e81 = clugen(1, 3, 2000, 1, 0, 10, 6, 1.5, 0, proj_dist_fn = proj_beta)
+set.seed(seed)
+e81 = clugen(1, 3, 2000, 1, 0, 10, 6, 1.5, 0, proj_dist_fn = proj_wbull)
 
-
-```
-
-
-```julia
-# Custom proj_dist_fn: point projections placed using the Laplace distribution
-proj_laplace(len, n, rng) = rand(rng, Laplace(0, len / 6), n)
-
-e79 = clugen(1, 3, 2000, [1], 0, [10], 6, 1.5, 0; rng = StableRNG(45))
-e80 = clugen(1, 3, 2000, [1], 0, [10], 6, 1.5, 0; proj_dist_fn = "unif", rng = StableRNG(45))
-e81 = clugen(1, 3, 2000, [1], 0, [10], 6, 1.5, 0; proj_dist_fn = proj_laplace, rng = StableRNG(45))
-
-p79 = plot(e79.points, seriestype = :density, group=e79.point_clusters, fill=true, fillalpha=0.35, legend=nothing, title="e79: proj_dist_fn=\"norm\" (default)", titlefontsize=9, color=theme_palette(:auto).colors.colors', xlim=(-19,4), ylim=(-0.09, 0.85), aspect_ratio=12, xlabel="\$x\$", grid=false, showaxis=:x, framestyle=:zerolines, yticks=false)
-plot!(p79, e79.points, -0.04 .* ones(sum(e79.cluster_sizes)), seriestype = :scatter, group=e79.point_clusters, markersize=2.5, markerstrokewidth=0.1, legend=nothing, color=theme_palette(:auto).colors.colors')
-
-p80 = plot(e80.points, seriestype = :density, group=e80.point_clusters, fill=true, fillalpha=0.35, legend=nothing, title="e80: proj_dist_fn=\"unif\"", titlefontsize=9, color=theme_palette(:auto).colors.colors', xlim=(-19,4), ylim=(-0.09, 0.85), aspect_ratio=12, xlabel="\$x\$", grid=false, showaxis=:x, framestyle=:zerolines, yticks=false)
-plot!(p80, e80.points, -0.04 .* ones(sum(e80.cluster_sizes)), seriestype = :scatter, group=e80.point_clusters, markersize=2.5, markerstrokewidth=0.1, legend=nothing, color=theme_palette(:auto).colors.colors')
-
-p81 = plot(e81.points, seriestype = :density, group=e81.point_clusters, fill=true, fillalpha=0.35, legend=nothing, title="e81: custom proj_dist_fn (Laplace)", titlefontsize=9, color=theme_palette(:auto).colors.colors', xlim=(-19,4), ylim=(-0.09, 0.85), aspect_ratio=12, xlabel="\$x\$", grid=false, showaxis=:x, framestyle=:zerolines, yticks=false)
-plot!(p81, e81.points, -0.04 .* ones(sum(e81.cluster_sizes)), seriestype = :scatter, group=e81.point_clusters, markersize=2.5, markerstrokewidth=0.1, legend=nothing, color=theme_palette(:auto).colors.colors')
+plot_examples_1D(list(e = e79, t = "e79: proj_dist_fn='norm'"),
+                 list(e = e80, t = "e80: proj_dist_fn='unif'"),
+                 list(e = e81, t = "e81: custom proj_dist_fn (Weibull)"))
 ```
 
