--- a/vignettes/examplesnd.Rmd
+++ b/vignettes/examplesnd.Rmd
@@ -36,10 +36,13 @@ RNGversion("3.6.0")
 proj_wbull <- function(len, n) rweibull(n, shape = 1.5, scale = len / 2) - len / 2
 
 # Function for plotting the 1D clusters, showing density
-plot_examples_1D <- function(...) {
+plot_examples_1d <- function(..., pmargin = 0.1, ymax = 0.6) {
   ets <- list(...)
   xmax <- max(sapply(ets, function(et) max(et$e$points)))
   xmin <- min(sapply(ets, function(et) min(et$e$points)))
+  xd <- pmargin * abs(xmax - xmin)
+  xmax <- xmax + xd
+  xmin <- xmin - xd
   plts <- lapply(
     ets,
     function(et) {
@@ -51,19 +54,19 @@ plot_examples_1D <- function(...) {
                                    fill = factor(e79$point_clusters)),
                      alpha = 0.3) +
         geom_point(mapping = aes(x = e$points,
-                                 y = 0,
+                                 y = -0.02,
                                  fill = factor(e$point_clusters)),
                    shape = 21,
                    colour = "black",
                    stroke = 0.1,
                    alpha = 0.2) +
         ggtitle(t) + xlab(NULL) + ylab(NULL) +
-        scale_y_continuous(breaks = NULL) +
-        xlim(xmin, xmax) +
+        xlim(xmin, xmax) + ylim(-0.025, ymax) +
         theme(legend.position = "none",
               plot.title = element_text(size = rel(0.9)),
               axis.ticks.y = element_blank(),
-              axis.text.y = element_blank())
+              axis.text.y = element_blank()
+              )
     })
   wrap_plots(plts)
 }
@@ -73,14 +76,16 @@ seed <- 222
 
 ```{r}
 set.seed(seed)
-e79 = clugen(1, 3, 2000, 1, 0, 10, 6, 1.5, 0)
+e79 <- clugen(1, 3, 2000, 1, 0, 10, 6, 1.5, 0)
 set.seed(seed)
-e80 = clugen(1, 3, 2000, 1, 0, 10, 6, 1.5, 0, proj_dist_fn = "unif")
+e80 <- clugen(1, 3, 2000, 1, 0, 10, 6, 1.5, 0, proj_dist_fn = "unif")
 set.seed(seed)
-e81 = clugen(1, 3, 2000, 1, 0, 10, 6, 1.5, 0, proj_dist_fn = proj_wbull)
+e81 <- clugen(1, 3, 2000, 1, 0, 10, 6, 1.5, 0, proj_dist_fn = proj_wbull)
 
-plot_examples_1D(list(e = e79, t = "e79: proj_dist_fn='norm'"),
+plot_examples_1d(list(e = e79, t = "e79: proj_dist_fn='norm'"),
                  list(e = e80, t = "e80: proj_dist_fn='unif'"),
-                 list(e = e81, t = "e81: custom proj_dist_fn (Weibull)"))
+                 list(e = e81, t = "e81: custom proj_dist_fn (Weibull)"),
+                 pmargin = 0.07,
+                 ymax = 0.575)
 ```
 
